# GFCnew

./: .editorconfig  .gitignore  .prettierrc  Dockerfile  Queries.sql  README.md  SQLs.sql  Sistema GFC.mwb  Sistema GFC.mwb.bak  db_gfc.mwb  deploy.sh  docker-compose.yml  erro.html  fluxo.pptx  gastos.xlsx  gfc.cfg  gfc_linux.cfg  gunicorn_config.py  init_db.sql  main copy.py  main.py  medição.xlsx  nginx.conf  pyproject.toml  requirements.txt  teste_panda.xlsx  upload_gastos.html
app/: filters.py  main.py  wscgi.py
app/controller/: agendaAtividadeController.py  agendaController.py  aspectosController.py  bancoController.py  categoriasController.py  certidaoController.py  clienteController.py  consideracaoController.py  (+20 more)
controller/: clienteController.py  contaController.py  documentosController.py  empreendimentoController.py  financeiroController.py  gastoController.py  geralController.py  graficoController.py  notaController.py  orcamentoController.py  pontoController.py  usuarioController.py
dto/: cliente.py  documento.py  empreendimento.py  financeiro.py  gasto.py  geral.py  medicao.py  orcamento.py  torre.py  usuario.py
static/: style.css
templates/: cad_empreend.html  cliente.html  erro.html  home.html  lista_agendas.html  lista_clientes.html  lista_orcamentos.html  lista_torres.html  lista_unidades.html  login.html  menu.html  orcamento_item.html  orcamento_liberacao.html  orcamentos_itens.html  relatorio.html  torre.html  unidade.html  upload_fotos.html  upload_gastos.html  upload_medicoes.html  upload_orcamentos.html
utils/: CtrlSessao.py  dbContext.py
(+159 files in other folders)
